microservices/auth-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service-svc
spec:
  selector:
    app: auth-service
  ports:
    - port: 80
      targetPort: 80
